# SVF-Python

./: .gitignore  .gitmodules  Build_From_Scratch.md  Build_Release_Whl.md  CMakeCache.txt  CMakeLists.txt  MANITEST.in  Makefile  README.md  VERSION  andersen.h  build.sh  build_from_scratch.sh  build_from_scratch_linux.sh  build_release_whl.sh  build_whl_mac.sh  cmake_install.cmake  env.sh  example.c  example.ll  example.svf.bc  example.svf.json  example2.c  example2.ll  example2.svf.bc  main.c  output.db  ptacg.dot  pybind_module.cpp  python_aeModule.py  python_cflModule.py  python_ddaModule.py  python_llvm2svfModule.py  python_mtaModule.py  python_saberModule.py  python_sapperModule.py  python_svfModule.py  python_wpaModule.py  setup.py  setup_linux.py  (+5 more)
.github/workflow/: release.yml
.github/workflows/: build.yml  ci.yml  jupyter.yml  new-version.yml  release.yml  svf-example-build.yml  svf-python-build.yml
SVF-Python-example-main/src/: svf-ex.py
demo/: SVFIR.py  demo.ll  demo_mta.ll  icfg.ipynb  input.ll  mta.ipynb  pag.ipynb  svfg.ipynb  svfir.py
pybind/: AE.cpp  Graphs.cpp  MTA.cpp  MemoryModel.cpp  SVFIR.cpp  WPA.cpp  svf_pybind.cpp
pysvf/: __init__.py  ae.py  cfl.py  dvf.py  enums.py  llvm2svf.py  mta.py  pysvf.pyi  saber.py  svf_ex.py  wpa.py
python_modules/: python_aeModule.py  python_cflModule.py  python_ddaModule.py  python_exampleModule.py  python_llvm2svfModule.py  python_mtaModule.py  python_saberModule.py  python_svfModule.py  python_wpaModule.py  system.py
src/: svf-ex.py  svfLLVMUtil.py  svfModule.py
src/srcPybind/: pybind_module.cpp
src/srcPythonModule/: AE.py  Andersen.py  AndersenWaveDiff.py  CFL.py  CL.py  DDA.py  ICFG.py  LLVM2SVF.py  LLVMModuleSet.py  LLVMUtil.py  MTA.py  Options.py  PTACallGraph.py  SABER.py  SVFG.py  SVFIR.py  SVFModule.py  VFG.py  WPA.py  package.py  svfLLVMUtil.py
src/svfLLVMUtil/: llvm_util.cpp
src/svfModule/: CMakeLists.txt  svfModule.cpp  svfModule.h
src/svfpy/: svf-ex.py
src/svfpy/Module/: Andersen.py  AndersenWaveDiff.py  CL.py  LLVM.py  LLVMModuleSet.py  SVFG.py  SVFGBuilder.py  SVFIR.py  SVFIRBuilder.py  SVFModule.py  SVFUtil.py  VFG.py  svfLLVMUtil.py
test_cases/: test.py  test2.py
tutorials/: demo.c  pag.ipynb  svfg.ipynb
